Adding elipse example

--- a/trabalho.html
+++ b/trabalho.html
@@ -204,7 +204,7 @@
         this.polygonModel.draw(180 * elapsedTime, Math.sin(elapsedTime), Math.cos(elapsedTime));
         this.rectangleModel.draw(45);
         this.lineModel.draw();
-        // this.elipseModel.draw();
+        this.elipseModel.draw(90, 1.0);
         // this.circleModel.draw();
         // this.bezierModel[0].draw();
         // this.bezierModel[1].draw();
